--- a/css/Komputer-style.css
+++ b/css/Komputer-style.css
@@ -7,3 +7,4 @@ a.guzik:hover{color: yellow;}
 #loguj {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)}
 #avatar{width: 192px; height: 192px; border-radius: 100%; background-image: url("/obrazy/user-192.png"); margin-left: auto; margin-right: auto;}
 @font-face {font-family: 'Lato'; font-style: normal; font-weight: 500; src: url("czcionki/Lato-Black.ttf");}
+#hd{color: red;}
